apps/argocd/home-dashboard/backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-dashboard-backend
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: home-dashboard-backend
  template:
    metadata:
      labels:
        app: home-dashboard-backend
    spec:
      containers:
        - image: ghcr.io/milanoid-labs/home-dashboard-api:backend-v0.2.0@sha256:1b79ee1bddc00deb3433e3bcc98d2c591fc3d6a9eb9fe460562c77b9bd6d56a1
          name: home-dashboard-backend
          ports:
            - containerPort: 8001
          readinessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
