apps/argocd/home-dashboard/backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-dashboard-backend
spec:
  ports:
    - port: 80
      targetPort: 8001
  selector:
    app: home-dashboard-backend
