apps/argocd/home-dashboard/frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-dashboard-frontend
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: home-dashboard-frontend
